--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@ body{
     background: black !important;
 }
 
+.icon-style{
+    /* border: 5px solid grey; */
+    /* border-radius: 50%; */
+
+}
+
+.icon-style:hover{
+    /* color: #5c375c; */
+    /* transform: scale(1,1); */
+}
+
 ul{
     list-style-type: none;
 } 
