css of experience page is updated

--- a/experience.css
+++ b/experience.css
@@ -1,3 +1,32 @@
 body{
     background: #252525 !important;
 }
+
+.nav-list{
+    list-style-type: none;
+    overflow: hidden;
+    display: inline-flex;
+    float: right;
+} 
+
+.list-ele{
+   padding: 10px;
+}
+
+.list-item {
+    text-decoration: none;
+    color: #a4abbb;
+    font-size :medium;
+    /* border-color: #a4abbb; */
+    /* border-style: outset; */
+    border-bottom:1px solid #a4abbb;
+}
+
+.list-item:hover{
+    color: #0dcaf0;
+    text-shadow: 0 0 3px #e5ebec;
+
+}
+
+
+
