--- a/activities.css
+++ b/activities.css
@@ -28,5 +28,12 @@ body{
 
 }
 
+.heading{
+    padding-bottom: 10px;
+    color: #0dcaf0;
+    font-weight: bold;
+    text-shadow:2px 1px 1px rgb(139, 70, 139);
+  }
+
 
 
