--- a/skills.css
+++ b/skills.css
@@ -1,5 +1,6 @@
-body{
+ body{
     background: #252525 !important;
+    /* font-family: Helvetica, Arial, sans-serif; */
 }
 
 .nav-list{
@@ -17,8 +18,6 @@ body{
     text-decoration: none;
     color: #a4abbb;
     font-size :medium;
-    /* border-color: #a4abbb; */
-    /* border-style: outset; */
     border-bottom:1px solid #a4abbb;
 }
 
@@ -28,5 +27,94 @@ body{
 
 }
 
+/* .skill-bar{
+    height: 20px;
+    width: 50px;
+    background-color: rgb(17, 202, 103);
+    color: azure;
+    margin: 5px;
+} */
+
+  /* .container{
+    width: 50%;
+    margin: 0 auto;
+  } */
+  @keyframes load{
+    from {
+      width: 0%
+    }
+  }
+  @-webkit-keyframes load{
+    from {
+      width: 0%
+    }
+  }
+  @-moz-keyframes load{
+    from {
+      width: 0%
+    }
+  }
+  @-o-keyframes load{
+    from {
+      width: 0%
+    }
+  }
+  
+  .bar{
+    padding: 2px;
+    border-radius: 15px;
+    margin-bottom: 8px;
+    font-size: 10px;
+    color: #FFF;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+
+   
+    background-color: #252525;
+    border: 2px solid #0dcaf0;
+  }
+  .bar::before{
+    content:  attr(data-skill);
+    display: inline-block;
+    padding: 5px 0 5px 10px;
+    border-radius: inherit;
+    animation: load 2s 0s;
+    -webkit-animation: load 2s 0s;
+    -moz-animation: load 2s 0s;
+    -o-animation: load 2s 0s;
+
+    background-color: #ff8fcf;
+
+  }
+  
+  .bar.front::before{
+    background-color: #00c2ba;
+  }
+  .bar.back::before{
+    background-color: #ce96fb;
+  }
+  
+  .bar.learning::before{
+    width: calc(40% - 10px);
+  }
+  .bar.basic::before{
+    width: calc(60% - 10px);
+  }
+  .bar.intermediate::before{
+    width: calc(70% - 10px);
+  }
+  .bar.advanced::before{
+    width: calc(80% - 10px);
+  }
+  .bar.expert::before{
+    width: calc(90% - 10px);
+  }
+  
 
 
+  .heading{
+    padding-bottom: 10px;
+    color: #0dcaf0;
+    font-weight: bold;
+    text-shadow:2px 1px 1px rgb(139, 70, 139);
+  }
